--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -8,7 +8,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Install Hugo
-              run: sudo snap install hugo
+              run: sudo snap install hugo --channel=extended
             - name: Checkout Repo
               uses: actions/checkout@v2
             - name: Build Pages
